// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapCombatantInfoArgs handles random sample of data 1`] = `
Object {
  "gearInfo": Object {
    "back": Object {
      "bonusIDs": Array [
        8765,
        8136,
        8138,
        7359,
        6652,
        8284,
        1615,
        6646,
      ],
      "enchantInfo": Array [
        6204,
        0,
        0,
      ],
      "gemInfo": Array [],
      "itemId": 185781,
      "itemLevel": 298,
    },
    "chest": Object {
      "bonusIDs": Array [
        6652,
        8758,
        8094,
        8153,
        1511,
      ],
      "enchantInfo": Array [
        6230,
        6225,
        0,
      ],
      "gemInfo": Array [],
      "itemId": 188929,
      "itemLevel": 291,
    },
    "feet": Object {
      "bonusIDs": Array [
        7054,
        7882,
        8156,
        6649,
        6648,
        1588,
      ],
      "enchantInfo": Array [],
      "gemInfo": Array [],
      "itemId": 171413,
      "itemLevel": 291,
    },
    "finger1": Object {
      "bonusIDs": Array [
        8765,
        7359,
        6652,
        7580,
        8284,
        1615,
        6646,
      ],
      "enchantInfo": Array [
        6166,
        0,
        0,
      ],
      "gemInfo": Array [
        173128,
        120,
      ],
      "itemId": 185840,
      "itemLevel": 298,
    },
    "finger2": Object {
      "bonusIDs": Array [
        7359,
        6652,
        7578,
        7797,
        1582,
        6646,
      ],
      "enchantInfo": Array [
        6166,
        0,
        0,
      ],
      "gemInfo": Array [],
      "itemId": 178824,
      "itemLevel": 268,
    },
    "hands": Object {
      "bonusIDs": Array [
        6652,
        7749,
        8765,
        8154,
        8270,
        1518,
        6646,
      ],
      "enchantInfo": Array [
        6210,
        0,
        0,
      ],
      "gemInfo": Array [],
      "itemId": 188928,
      "itemLevel": 298,
    },
    "head": Object {
      "bonusIDs": Array [
        6652,
        8258,
        7580,
        7359,
        8765,
        8151,
        1524,
      ],
      "enchantInfo": Array [],
      "gemInfo": Array [
        173128,
        120,
      ],
      "itemId": 188933,
      "itemLevel": 304,
    },
    "legs": Object {
      "bonusIDs": Array [
        6652,
        8759,
        8095,
        8155,
        1524,
      ],
      "enchantInfo": Array [],
      "gemInfo": Array [],
      "itemId": 188931,
      "itemLevel": 304,
    },
    "main_hand": Object {
      "bonusIDs": Array [
        8765,
        7359,
        6652,
        8214,
        1615,
        6646,
      ],
      "enchantInfo": Array [
        6229,
        6200,
        0,
      ],
      "gemInfo": Array [],
      "itemId": 185824,
      "itemLevel": 298,
    },
    "neck": Object {
      "bonusIDs": Array [
        8758,
        6652,
        7579,
        1563,
        6646,
      ],
      "enchantInfo": Array [],
      "gemInfo": Array [],
      "itemId": 183040,
      "itemLevel": 291,
    },
    "off_hand": Object {
      "bonusIDs": Array [
        7359,
        6652,
        8765,
        8228,
        3149,
        6646,
      ],
      "enchantInfo": Array [],
      "gemInfo": Array [],
      "itemId": 169068,
      "itemLevel": 298,
    },
    "relic": Object {
      "bonusIDs": Array [],
      "enchantInfo": Array [],
      "gemInfo": Array [],
      "itemId": 0,
      "itemLevel": 0,
    },
    "shirt": Object {
      "bonusIDs": Array [],
      "enchantInfo": Array [],
      "gemInfo": Array [],
      "itemId": 0,
      "itemLevel": 0,
    },
    "shoulder": Object {
      "bonusIDs": Array [
        8125,
        7882,
        8156,
        6649,
        6648,
        1588,
      ],
      "enchantInfo": Array [],
      "gemInfo": Array [],
      "itemId": 171417,
      "itemLevel": 291,
    },
    "trinket1": Object {
      "bonusIDs": Array [
        6652,
        8764,
        1537,
        6646,
      ],
      "enchantInfo": Array [],
      "gemInfo": Array [],
      "itemId": 186438,
      "itemLevel": 298,
    },
    "trinket2": Object {
      "bonusIDs": Array [
        8759,
        6652,
        1550,
        6646,
      ],
      "enchantInfo": Array [],
      "gemInfo": Array [],
      "itemId": 186424,
      "itemLevel": 304,
    },
    "waist": Object {
      "bonusIDs": Array [
        8765,
        8136,
        8137,
        7359,
        6652,
        7578,
        8270,
        1615,
        6646,
      ],
      "enchantInfo": Array [],
      "gemInfo": Array [],
      "itemId": 185806,
      "itemLevel": 298,
    },
    "wrist": Object {
      "bonusIDs": Array [
        6652,
        7578,
        8759,
        8132,
        8138,
        1550,
        6646,
      ],
      "enchantInfo": Array [
        6222,
        0,
        0,
      ],
      "gemInfo": Array [],
      "itemId": 189777,
      "itemLevel": 304,
    },
  },
  "pvpTalentInfo": Array [
    "0",
    "0",
    "0",
    "0",
  ],
  "talentInfo": Array [
    "152261",
    "204023",
    "115750",
    "204018",
    "223817",
    "183778",
    "204074",
  ],
}
`;

exports[`mapCombatantInfoArgs mapGearRowsToSlot 1`] = `
Object {
  "back": Object {
    "bonusIDs": Array [
      8765,
      8136,
      8138,
      7359,
      6652,
      8284,
      1615,
      6646,
    ],
    "enchantInfo": Array [
      6204,
      0,
      0,
    ],
    "gemInfo": Array [],
    "itemId": 185781,
    "itemLevel": 298,
  },
  "chest": Object {
    "bonusIDs": Array [
      6652,
      8758,
      8094,
      8153,
      1511,
    ],
    "enchantInfo": Array [
      6230,
      6225,
      0,
    ],
    "gemInfo": Array [],
    "itemId": 188929,
    "itemLevel": 291,
  },
  "feet": Object {
    "bonusIDs": Array [
      7054,
      7882,
      8156,
      6649,
      6648,
      1588,
    ],
    "enchantInfo": Array [],
    "gemInfo": Array [],
    "itemId": 171413,
    "itemLevel": 291,
  },
  "finger1": Object {
    "bonusIDs": Array [
      8765,
      7359,
      6652,
      7580,
      8284,
      1615,
      6646,
    ],
    "enchantInfo": Array [
      6166,
      0,
      0,
    ],
    "gemInfo": Array [
      173128,
      120,
    ],
    "itemId": 185840,
    "itemLevel": 298,
  },
  "finger2": Object {
    "bonusIDs": Array [
      7359,
      6652,
      7578,
      7797,
      1582,
      6646,
    ],
    "enchantInfo": Array [
      6166,
      0,
      0,
    ],
    "gemInfo": Array [],
    "itemId": 178824,
    "itemLevel": 268,
  },
  "hands": Object {
    "bonusIDs": Array [
      6652,
      7749,
      8765,
      8154,
      8270,
      1518,
      6646,
    ],
    "enchantInfo": Array [
      6210,
      0,
      0,
    ],
    "gemInfo": Array [],
    "itemId": 188928,
    "itemLevel": 298,
  },
  "head": Object {
    "bonusIDs": Array [
      6652,
      8258,
      7580,
      7359,
      8765,
      8151,
      1524,
    ],
    "enchantInfo": Array [],
    "gemInfo": Array [
      173128,
      120,
    ],
    "itemId": 188933,
    "itemLevel": 304,
  },
  "legs": Object {
    "bonusIDs": Array [
      6652,
      8759,
      8095,
      8155,
      1524,
    ],
    "enchantInfo": Array [],
    "gemInfo": Array [],
    "itemId": 188931,
    "itemLevel": 304,
  },
  "main_hand": Object {
    "bonusIDs": Array [
      8765,
      7359,
      6652,
      8214,
      1615,
      6646,
    ],
    "enchantInfo": Array [
      6229,
      6200,
      0,
    ],
    "gemInfo": Array [],
    "itemId": 185824,
    "itemLevel": 298,
  },
  "neck": Object {
    "bonusIDs": Array [
      8758,
      6652,
      7579,
      1563,
      6646,
    ],
    "enchantInfo": Array [],
    "gemInfo": Array [],
    "itemId": 183040,
    "itemLevel": 291,
  },
  "off_hand": Object {
    "bonusIDs": Array [
      7359,
      6652,
      8765,
      8228,
      3149,
      6646,
    ],
    "enchantInfo": Array [],
    "gemInfo": Array [],
    "itemId": 169068,
    "itemLevel": 298,
  },
  "relic": Object {
    "bonusIDs": Array [],
    "enchantInfo": Array [],
    "gemInfo": Array [],
    "itemId": 0,
    "itemLevel": 0,
  },
  "shirt": Object {
    "bonusIDs": Array [],
    "enchantInfo": Array [],
    "gemInfo": Array [],
    "itemId": 0,
    "itemLevel": 0,
  },
  "shoulder": Object {
    "bonusIDs": Array [
      8125,
      7882,
      8156,
      6649,
      6648,
      1588,
    ],
    "enchantInfo": Array [],
    "gemInfo": Array [],
    "itemId": 171417,
    "itemLevel": 291,
  },
  "trinket1": Object {
    "bonusIDs": Array [
      6652,
      8764,
      1537,
      6646,
    ],
    "enchantInfo": Array [],
    "gemInfo": Array [],
    "itemId": 186438,
    "itemLevel": 298,
  },
  "trinket2": Object {
    "bonusIDs": Array [
      8759,
      6652,
      1550,
      6646,
    ],
    "enchantInfo": Array [],
    "gemInfo": Array [],
    "itemId": 186424,
    "itemLevel": 304,
  },
  "waist": Object {
    "bonusIDs": Array [
      8765,
      8136,
      8137,
      7359,
      6652,
      7578,
      8270,
      1615,
      6646,
    ],
    "enchantInfo": Array [],
    "gemInfo": Array [],
    "itemId": 185806,
    "itemLevel": 298,
  },
  "wrist": Object {
    "bonusIDs": Array [
      6652,
      7578,
      8759,
      8132,
      8138,
      1550,
      6646,
    ],
    "enchantInfo": Array [
      6222,
      0,
      0,
    ],
    "gemInfo": Array [],
    "itemId": 189777,
    "itemLevel": 304,
  },
}
`;
